# career-agent

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: architecture.md  cli-reference.md  component-architecture.md  diagrams.md  er-diagram.md  implementation-plan.md  security.md  storage.md  v2-foundation-plan.md
tests/: test_cli.py  test_config.py  test_dashboard.py  test_experience_bullets_model.py  test_experience_bullets_repository.py  test_experience_bullets_service.py  test_experience_facts_model.py  test_experience_facts_repository.py  test_experience_facts_service.py  test_experience_intake_service.py  test_experience_orchestration_context.py  test_experience_orchestration_models.py  test_experience_roles_model.py  test_experience_roles_repository.py  test_experience_roles_service.py  test_experience_workflow_factory.py  test_experience_workflow_finding_generator.py  test_experience_workflow_question_generator.py  test_experience_workflow_service.py  test_fact_review_action_generator.py  test_fact_review_model.py  test_fact_review_repository.py  test_fact_review_service.py  test_llm.py  test_llm_client.py  test_models.py  test_openai_compatible_llm_client.py  test_preferences_builder.py  test_profile_service.py  test_repositories.py  test_role_sources_model.py  test_role_sources_repository.py  test_role_sources_service.py  test_scoped_constraints_model.py  test_scoped_constraints_repository.py  test_scoped_constraints_service.py  test_source_analysis_model.py  test_source_analysis_repository.py  test_source_analysis_service.py  (+6 more)
(+79 files in other folders)
