[project]
name = "career-agent"
version = "0.1.0"
description = "A local-first Python application for structured career workflow tooling."
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.scripts]
career-agent = "career_agent.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
